# polkit-uos

./: CMakeLists.txt  README.md  com.polkit.absurd.dream.conf  com.polkit.absurd.dream.dbus.service  com.polkit.absurd.dream.policy  cpserver.sh  rmserver.sh
client/: dbus_interface.cpp  dbus_interface.h  main.cpp  mainwindow.cpp  mainwindow.h
service/: PolicyKitHelper.cpp  PolicyKitHelper.h  dbus.cpp  dbus.h  dbus_adaptor.cpp  dbus_adaptor.h  main.cpp  main.h
